# devops-quick-start-guide

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  test_main.py
k8s/: deployment.yaml  service.yaml
